# gitpulse

./: .gitignore  AGENTS.md  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  REWRITE_TRACKER.md  ROADMAP.md  biome.json  clippy.toml  deny.toml  docker-compose.yml  gitpulse.example.toml  go.mod  go.sum  package.json  tsconfig.base.json
.cargo/: config.toml
.github/workflows/: ci.yml
apps/api/: package.json
apps/api/src/: actions.ts  app.ts  index.ts  read-models.ts  settings.ts
apps/api/test/: app.integration.test.ts  app.test.ts
apps/gitpulse-cli/: Cargo.toml
apps/gitpulse-cli/src/: main.rs
apps/gitpulse-desktop/: Cargo.toml  tauri.conf.json
apps/gitpulse-desktop/src/: main.rs
apps/web/: astro.config.mjs  package.json
apps/web/src/components/: AchievementsPage.vue  ActionCenter.vue  DashboardPage.vue  PageFlash.vue  RepoDetailActions.vue  RepositoriesPage.vue  RepositoryDetailPage.vue  RepositoryListManager.vue  SessionsPage.vue  SettingsForm.vue  SettingsPage.vue
apps/web/src/layouts/: AppLayout.astro
apps/web/src/lib/: client.ts  format.ts
apps/web/src/pages/: achievements.astro  index.astro  sessions.astro  settings.astro
apps/web/src/styles/: app.css
assets/css/: app.css
assets/js/: app.js
cmd/gitpulse/: doctor_test.go  main.go  python_ui.go  tui.go  web_dist.go
crates/gitpulse-core/: Cargo.toml
crates/gitpulse-core/src/: config.rs  lib.rs  metrics.rs  models.rs  scoring.rs  sessions.rs  time.rs
crates/gitpulse-infra/: Cargo.toml
crates/gitpulse-infra/src/: config.rs  db.rs  dirs.rs  exclusions.rs  git.rs  github.rs  lib.rs  watcher.rs
crates/gitpulse-infra/tests/: git_integration.rs
crates/gitpulse-runtime/: Cargo.toml
crates/gitpulse-runtime/src/: lib.rs
crates/gitpulse-runtime/tests/: runtime_integration.rs
crates/gitpulse-web/: Cargo.toml
crates/gitpulse-web/src/: lib.rs
crates/gitpulse-web/templates/: base.html
crates/gitpulse-web/templates/pages/: achievements.html  dashboard.html  repo_detail.html  repositories.html  sessions.html  settings.html
crates/gitpulse-web/templates/partials/: activity_feed.html  dashboard_summary.html  repo_cards.html
crates/gitpulse-web/tests/: routes.rs
db/migrations/: 0001_initial.sql
deploy/: Caddyfile
docs/: architecture.md  desktop-release.md  frontend-parity-matrix.md  metrics.md  operator-workflow.md  plugin-architecture.md
docs/rewrite/: README.md  current-contract.md  parity-fixtures-and-cutover.md  sqlite-to-postgres.md  vnext-boundary.md
frontend/: README.md  biome.json  index.html  package.json  tailwind.config.ts  tsconfig.base.json  tsconfig.tsbuildinfo
frontend/shared/: package.json
frontend/shared/src/: actions.ts  client.ts  domain.ts  formatters.ts  index.ts  surfaces.ts  types.ts
frontend/shared/test/: shared.test.ts
frontend/src/: globals.css
frontend/src/components/: repo-card.tsx
frontend/src/components/ui/: input.tsx  panel.tsx  stat-card.tsx
frontend/src/layouts/: AppLayout.astro
frontend/src/lib/: api.ts  queries.ts  utils.ts
frontend/src/pages/: index.astro
frontend/src/pages/achievements/: index.astro
frontend/src/pages/repositories/: detail.astro  index.astro
frontend/src/pages/sessions/: index.astro
frontend/src/pages/settings/: index.astro
frontend/src/routes/: index.tsx
frontend/src/routes/achievements/: index.tsx
frontend/src/routes/repositories/: $repoId.tsx  index.tsx
frontend/src/routes/settings/: index.tsx
frontend/src/scripts/: app.ts
frontend/src/styles/: app.css
frontend/tests/: placeholder.test.ts
frontend/tui/: package.json  tsconfig.json
frontend/tui/src/: cli.ts  index.ts  render.ts
frontend/tui/test/: tui.test.ts
frontend/web/: astro.config.mjs  package.json  tsconfig.json
frontend/web/src/: env.d.ts
frontend/web/src/components/: AchievementsPage.vue  ActionCenter.vue  BackendStatus.astro  BackendStatusCard.vue  BackendStatusNotice.vue  DashboardPage.vue  PageFlash.vue  RepoDetailActions.vue  RepositoriesPage.vue  RepositoryDetailPage.vue  RepositoryListManager.vue  SessionsPage.vue  SettingsForm.vue  SettingsPage.vue
frontend/web/src/layouts/: AppLayout.astro
frontend/web/src/lib/: flash.ts  server.ts
frontend/web/src/pages/: achievements.astro  index.astro  sessions.astro  settings.astro
frontend/web/test/: web.test.ts
internal/config/: config.go  persist.go  persist_test.go
internal/db/: achievements.go  commits.go  db.go  db_test.go  feed.go  fileactivity.go  pushes.go  repos.go  rollups.go  schema.sql  sessions.go  snapshots.go  sqlite_helpers.go
internal/filter/: filter.go
internal/git/: git.go  git_test.go  snapshot.go
internal/metrics/: achievements.go  scoring.go  streaks.go
internal/models/: contracts.go  models.go
internal/runtime/: runtime.go  smoke_test.go
internal/sessions/: sessions.go
internal/web/: handlers_actions.go  handlers_actions_test.go  handlers_api.go  handlers_api_contract_test.go  handlers_pages.go  handlers_partials.go  render.go  server.go  server_test.go  static_ui.go  static_ui_test.go  templatefuncs.go
migrations/: 0001_init.sql  001_init.sql
python-ui/: README.md  pyproject.toml
python-ui/src/gitpulse_ui/: app.py  main.py  models.py  service.py  settings.py
python-ui/src/gitpulse_ui/static/: app.css
python-ui/src/gitpulse_ui/templates/: achievements.html  base.html  dashboard.html  repositories.html  repository_detail.html  sessions.html  settings.html
python-ui/src/gitpulse_ui/templates/partials/: action_center.html  backend_status.html  flash.html  repository_card.html  repository_section.html
python-ui/tests/: test_app.py  test_service.py
scripts/: desktop-package.sh  desktop-smoke.sh  migrate-sqlite.ts  migrate.ts  smoke.ts
templates/: base.html
templates/pages/: achievements.html  dashboard.html  repo_detail.html  repositories.html  sessions.html  settings.html
templates/partials/: activity_feed.html  dashboard_summary.html  repo_cards.html
web/: package.json  tsconfig.json  vite.config.ts
web/src/: main.tsx  routeTree.gen.ts
web/src/components/: app-layout.tsx
(+9 files in other folders)
