[workspace]
members = [
    "apps/gitpulse-cli",
    "apps/gitpulse-desktop",
    "crates/gitpulse-core",
    "crates/gitpulse-infra",
    "crates/gitpulse-runtime",
    "crates/gitpulse-web",
]
default-members = [
    "apps/gitpulse-cli",
    "crates/gitpulse-core",
    "crates/gitpulse-infra",
    "crates/gitpulse-runtime",
    "crates/gitpulse-web",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Stephen Sawyer <dunamismax>"]
repository = "https://github.com/dunamismax/gitpulse"
homepage = "https://github.com/dunamismax/gitpulse"
description = "Local-first git activity analytics. Track commits, pushes, sessions, and streaks across repositories without uploading source code."
keywords = ["git", "analytics", "developer-tools", "productivity", "local-first"]
categories = ["development-tools", "command-line-utilities"]

[workspace.dependencies]
anyhow = "1.0.100"
askama = { version = "0.15.4", features = ["serde_json"] }
axum = { version = "0.8.8", features = ["form", "macros", "query"] }
chrono = { version = "0.4.42", features = ["clock", "serde"] }
chrono-tz = "0.10.4"
clap = { version = "4.5.38", features = ["derive", "env"] }
config = { version = "0.15.22", default-features = false, features = ["toml", "convert-case"] }
directories = "6.0.0"
globset = "0.4.16"
ignore = "0.4.24"
mime_guess = "2.0.5"
notify = "8.2.0"
notify-debouncer-full = "0.7.0"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid", "json", "migrate"] }
tempfile = "3.23.0"
thiserror = "2.0.17"
tokei = "14.0.0"
tokio = { version = "1.48.0", features = ["fs", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.9.8"
tower-http = { version = "0.6.8", features = ["compression-full", "fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
walkdir = "2.5.0"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"
unwrap_used = "warn"
large_enum_variant = "allow"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_crate_dependencies = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
