[package]
name = "gitpulse-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
gitpulse-runtime = { version = "1.0.0", path = "../../crates/gitpulse-runtime" }
gitpulse-web = { version = "1.0.0", path = "../../crates/gitpulse-web" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
