[package]
name = "gitpulse-infra"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
config.workspace = true
directories.workspace = true
gitpulse-core = { version = "1.0.0", path = "../gitpulse-core" }
globset.workspace = true
ignore.workspace = true
mime_guess.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokei.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
walkdir.workspace = true
