[package]
name = "gitpulse-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
gitpulse-core = { version = "1.0.0", path = "../gitpulse-core" }
gitpulse-infra = { version = "1.0.0", path = "../gitpulse-infra" }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
