[package]
name = "gitpulse-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
askama.workspace = true
axum.workspace = true
chrono.workspace = true
gitpulse-core = { path = "../gitpulse-core" }
gitpulse-runtime = { path = "../gitpulse-runtime" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true

[dev-dependencies]
gitpulse-infra = { path = "../gitpulse-infra" }
tempfile.workspace = true
tower = "0.5.2"
