[package]
name = "gitpulse-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
askama.workspace = true
axum.workspace = true
chrono.workspace = true
gitpulse-core = { version = "0.1.0", path = "../gitpulse-core" }
gitpulse-runtime = { version = "0.1.0", path = "../gitpulse-runtime" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true

[dev-dependencies]
gitpulse-infra = { version = "0.1.0", path = "../gitpulse-infra" }
sqlx.workspace = true
tempfile.workspace = true
tower = "0.5.2"
uuid.workspace = true
